# Spyral

./: .gitignore  .gitmodules  404.html  H5Tester.py  MainScript  PCConstructor.py  PCMP.py  PCMPv2.py  PCTesterMP.py  Phase1.py  Phase2.py  Phase3.py  Phase4.py  Phase5.py  README.md  SECURITY.md  TPCH5_utils.py  Test.py  Tester.py  Zap_pads.csv  config.json  config.txt  e20009 run metadata.csv  environment.yml  flatlookup.csv  flutsize.csv  index.html  main.py  mkdocs.yml  nohup.out  objects.inv  params.txt  plotter.py  pyproject.toml  requirements.txt  run_spyral.py  sitemap.xml  target.json
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: ci.yml  publish.yml  test_publish.yml
CONTRIBUTING/: index.html
Gates/: HeGate.txt  dGate.txt  pGate.txt
OldFiles/: PCMP_Old.py
ScriptOutputs/: Phase1OUT.out  Phase2OUT.out  Phase3OUT.out  Phase4OUT.out
Tests/: H5Tester.py  Phase1Test.py  Phase2Test.py  Phase3Test.py  Phase4Test.py  Phase5Test.py  PostProcessTest.py
Tests/OldTests/: H5Tester.py
api/: index.html
api/core/: index.html
api/correction/: index.html
api/geometry/: index.html
api/interpolate/: index.html
api/parallel/: index.html
api/phase_cluster/: index.html
api/phase_estimate/: index.html
api/phase_pointcloud/: index.html
api/phase_solve/: index.html
api/phases/: index.html
api/run/: index.html
api/trace/: index.html
contributors/: index.html
docs/: CONTRIBUTING.md  contributors.md  faq.md  for_devs.md  index.md  quick_start.md
etc/: amdc_2020.txt  electrons.txt  gain_match_factors.csv  pad_electronics_legacy.csv  pad_time_correction.csv
faq/: index.html
for_devs/: index.html
notebooks/: e20009_gain_matching.ipynb  estimate_kalman.ipynb  examine_clouds.ipynb  examine_clusters.ipynb  examine_estimates.ipynb  examine_ic.ipynb  examine_interpolated.ipynb  examine_kalman.ipynb  example_analysis.ipynb  particle_id.ipynb
ntuple_testing/: all_ntuple_Be10dp178_Turi_0.txt  all_ntuple_Be10dp178_Turi_0001.txt  all_ntuple_Be10dp178_Turi_10.txt  all_ntuple_Be10dp178_Turi_5.txt
pcutils/: __init__.py  phase_1.py  phase_2.py  phase_3.py  phase_4.py  phase_4_interp.py  phase_4_interp_jit.py  phase_4_kalman.py  run.py
prof/: read_profile_results.py  spyral_profile.py
quick_start/: index.html
spyral/: __init__.py  phase_1.py  phase_2.py  phase_3.py  phase_4.py  phase_4_interp.py  phase_4_kalman.py  phase_cluster.py  phase_estimate.py  phase_pointcloud.py  phase_pointcloud_legacy.py  phase_solve.py  run.py  run_parallel.py
tests/: .env  run_0000.h5  run_0001.h5  test_circle.py  test_default_pipeline.py  test_pad.py  test_runs.py  test_threads.py
(+290 files in other folders)
