[project]
name = "Spyral"
version = "0.6.0"
description = "AT-TPC analysis pipeline"
authors = [
    {name = "gwm17", email = "gordonmccann215@gmail.com"},
]
dependencies = [
    "spyral-utils>=0.3.0",
    "black>=24.4.0",
    "contourpy>=1.2.1",
    "h5py>=3.11.0",
    "lmfit>=1.3.0",
    "numba>=0.59.1",
    "scikit-learn>=1.4.2",
    "tqdm>=4.66.2",
    "rocket-fft>=0.2.5",
    "typing-extensions>=4.11.0",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "GPL-3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.0",
]
lint = [
    "black>=24.4.2",
]
doc = [
    "mkdocs-material>=9.5.21",
    "mkdocstrings>=0.25.1",
    "mkdocstrings-python>=1.10.0",
]
