[project]
name = "attpc_spyral"
version = "1.0.0rc0"
description = "AT-TPC analysis pipeline"
authors = [
    {name = "gwm17", email = "gordonmccann215@gmail.com"},
    {name = "turinath", email = "turi@frib.msu.edu"},
]
dependencies = [
    "spyral-utils>=2.0.0",
    "contourpy>=1.2.1",
    "h5py>=3.11.0",
    "lmfit>=1.3.0",
    "numba>=0.61.0",
    "scikit-learn>=1.4.2",
    "tqdm>=4.65.0",
    "rocket-fft>=0.2.5",
    "typing-extensions>=4.11.0",
    "psutil>=5.9.8",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed"
]

[project.urls]
Documentation = "https://attpc.github.io/Spyral"
Repository = "https://github.com/ATTPC/Spyral"
Issues = "https://github.com/ATTPC/Spyral/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.0",
]
lint = [
    "ruff>=0.5.7",
]
doc = [
    "mkdocs-material>=9.5.21",
    "mkdocstrings>=0.25.1",
    "mkdocstrings-python>=1.10.0",
]

[tool.ruff.lint]
select = ["E", "F", "B", "NPY201"]
ignore = ["E501"]
